# case-NVIDIA-IA

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
context/: architecture-grilling-coverage.md  collection-adapters.md  demo-architecture-script.md  domain-model.md  frameworks-and-retrieval-strategy.md  learning-path.md  next-session.md  prd-ai-native-assessment.md  prd-nvidia-downstream-technical-architecture.md  prd-nvidia-knowledge-recommendation-briefing.md  production-retrieval-and-scraping-architecture.md  production-smoke-matrix.md  project-architecture.excalidraw  project-scope.md  roadmap-nvidia-knowledge-recommendation-briefing.md  roadmap-pipeline-avaliação.md  roadmap-scraping-hardening.md  scraping-mvp-status.md
context/adr/: 0001-evidence-first-architecture.md  0002-langgraph-as-orchestration-layer.md  0003-mvp-before-scale.md  0004-product-prioritization-after-grilling.md  0005-operational-ai-native-and-official-nvidia-sources.md  0006-recommendation-owns-nvidia-opportunity-priority.md  0007-framework-boundaries-and-retrieval-strategy.md  0008-production-adapters-keep-deterministic-core.md
db/: schema.sql
frontend/: README.md  index.html  package.json
frontend/scripts/: browser-qa.mjs  build.mjs  (+2 more)
scripts/: README.md  codex_issue_batch.py
tests/: test_ai_native_assessment.py  test_briefing.py  test_cli.py  test_collection_adapters.py  test_collection_quality.py  test_discovery.py  test_downstream_artifacts.py  test_downstream_metrics.py  test_downstream_persistence.py  test_downstream_workflow.py  test_evidence.py  test_framework_adapter_compatibility.py  test_framework_adapters.py  test_frontend_api.py  test_gap_space_assessment.py  test_intelligence_workflow.py  test_llm_adapter_smoke.py  test_nvidia_embeddings.py  test_nvidia_hybrid_retrieval.py  test_nvidia_knowledge.py  test_nvidia_knowledge_ingestion.py  test_nvidia_recommendation.py  test_nvidia_reranking.py  test_page_collection.py  test_persistence.py  test_pgvector_embedding_persistence.py  test_pgvector_smoke.py  test_pipeline.py  test_playwright_collection_smoke.py  test_postgres_persistence_smoke.py  test_production_scraping_smoke.py  test_production_smoke_matrix.py  test_robots_policy.py  test_scraping_graph.py  test_scraping_policy.py  test_search_execution.py  test_search_params.py  test_search_plan.py  test_sql_repository.py  test_startup_deduplication.py  (+2 more)
(+68 files in other folders)
