[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-startup-intel"
version = "0.1.0"
description = "Evidence-first intelligence pipeline for Brazilian AI-native startup qualification."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "playwright",
    "trafilatura",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]
postgres = [
    "psycopg[binary]",
]
scraping-scale = [
    "scrapy",
]
scraping-services = [
    "firecrawl-py",
]
embeddings = [
    "sentence-transformers",
]
reranking = [
    "sentence-transformers",
]
pgvector = [
    "psycopg[binary]",
]
workflow = [
    "langgraph",
    "langgraph-checkpoint-postgres",
]

[project.scripts]
nvidia-startup-intel = "nvidia_startup_intel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "pgvector_integration: optional real Postgres/pgvector smoke tests, skipped unless explicitly enabled",
    "llm_adapter_integration: optional real LLM/framework adapter smoke tests, skipped unless explicitly enabled",
    "playwright_collection_integration: optional real Playwright collection smoke tests, skipped unless explicitly enabled",
    "production_scraping_integration: optional real production scraping smoke tests, skipped unless explicitly enabled",
    "postgres_persistence_integration: optional real Postgres complete-run persistence smoke tests, skipped unless explicitly enabled",
    "langgraph_checkpoint_integration: optional real LangGraph/Postgres checkpoint smoke tests, skipped unless explicitly enabled",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    ".tools",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = false
warn_return_any = false
strict_optional = false
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "no-redef",
    "return-value",
    "union-attr",
]
